--- a/uefa2.html
+++ b/uefa2.html
@@ -39,14 +39,14 @@ So whether you were a die-hard football fanatic or a curious economics enthusias
         </div>
         <div class="carousel">
             <ul>
-                <li><img src="pics/2.jpg"></li>
-                <li><img src="pics/4.jpg"></li>
-                <li><img src="pics/6.jpg"></li>
-                <li><img src="pics/9.jpg"></li>
+                <li><img src="2.jpg"></li>
+                <li><img src="4.jpg"></li>
+                <li><img src="6.jpg"></li>
+                <li><img src="9.jpg"></li>
                  <!-- <li><img src="pics/10.jpg"></li>  -->
-                <li><img src="pics/13.jpg"></li>
-                <li><img src="pics/14.jpg"></li>
-                <li><img src="pics/19.jpg"></li>
+                <li><img src="13.jpg"></li>
+                <li><img src="14.jpg"></li>
+                <li><img src="19.jpg"></li>
             </ul>
         </div>
     </div>
